--- a/services/index.html
+++ b/services/index.html
@@ -320,12 +320,9 @@
               <li>Quarterly workshops</li>
               <li>Typewriter</li>
             </ul>
-            <hr>
-            <h4>Do I need to make an appointment?</h4>
           </div>
           <div class="span8">
-            <h3><strong>// Picture goes here //</strong></h3>
-            
+            <img src="../assets/img/tral.jpg"/>
           </div>
         </div>
 
@@ -362,32 +359,11 @@
             <p>Schedule of key scholarship dates during the academic year (regular SRC workshops, other special SRC events,  SRC donor scholarship deadlines, other important UCLA scholarship deadlines, and the FAFSA deadline, among others)</p>
           </div>
         </div>
-        <hr>
-        <div class="row">
-          <h3 class="text-center"><strong>Do I need to make an appointment?</strong></h3>
-        </div>
-        <div class="row">
-          <div class="green span6">
-            <h3>You don't need to make an appointment if:</h3>
-            <ul>
-              <li>You have general questions about the scholarship process</li>
-              <li>You want to browse our library of scholarship resources</li>
-            </ul>
-          </div>
-          <div class="red span6">
-            <h3>You do need to make an appointment if you are a UCLA student and:</h3>
-            <ul>
-              <li>You have specific questions about a particular scholarship application</li>
-              <li>You need help with a scholarship essay</li>
-            </ul>
-          </div>
-        </div>
         <div class="row">
           <h3 class="text-center"><strong>To make a 30-minute writing appointment:</strong></h3>
           <div class="span8 offset2">
           <ul>
               <li>CALL - 01293841029348</li>
-              <li>EMAIL - asdfjlks@sjdfo.com</li>
             </ul>
           </div>
         </div>
