--- a/resources/indexn.html
+++ b/resources/indexn.html
@@ -298,67 +298,132 @@
       <div class="container top-logo">
         <ul class="breadcrumb">
           <li><a href="../home/index.html">Home</a> <span class="divider">/</span></li>
-          <li class="active">SRC Services</li>
+          <li class="active">Resources and Support</li>
         </ul>
       </div>
       <!-- pic -->
       <div class="container">
-        <img src="../assets/img/pic1.png">
+        <img src="../assets/img/pic2.png">
       </div>
       <!-- mid -->
       <div class="container main-feature-bg">
         <div class="container main-feature">
-
+          <div id="financial"></div>
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>SRC Services</h2>
+                <h2>Resources and Support</h2>
                 <hr/>
               </div>
             </div>
             <!-- Example row of columns -->
           <div class="row-fluid">
-            <div class="span2">
+            <div class="span4">
+              <h3>Quick Links</h3>
+              <ul class="unstyled">
+                <li><a href="#financial">Financial and Administrative</a></li>
+                <li><a href="#support">Support for Specific Populations</a></li>
+                <li><a href="#academic">Academic Counseling and Support Services</a></li>
+                <li><a href="#resource">Student Wellness Resources</a></li>
+                <li><a href="#involve">Get Involved</a></li>
+                <li><a href="#parents">For Parents</a></li>
+              </ul>
             </div>
-            <div class="span5">
-              <h3><a href="hours.html">Drop-in scholarship counseling</a></h3>
-              <p>Have general questions about the scholarship process? Want to browse our library of scholarship resources? Feel free to drop in whenever the SRC is open! </p>
-            </div>
-            <div class="span5">
-              <h3><a href="hours.html">Scholarship books and resources</a></h3>
-              <p>Don’t limit your scholarship search to the web! Browse the SRC’s extensive library of scholarship books, notebooks of scholarship listings, resource guides, and bulletin boards. Stop by any time the SRC is open!</p>
-           </div>
-         </div>
-         <div class="row-fluid">
-            <div class="offset2 span5">
-              <h3><a href="counseling.html">Individual Counseling</a></h3>
-              <p>Have specific questions about a particular scholarship application? Not sure where to begin? Need help developing a realistic scholarship application schedule? Call us at 310.206.2875 to make an appointment.</p>
-            </div>
-            <div class="span5">
-              <h3><a href="counseling.html">Scholarship essay writing support</a></h3>
-              <p>Need to brainstorm ideas for a scholarship essay? Having trouble with your outline? Need help polishing your draft? Call us at 310.206.2875 to make a 30-minute writing appointment!</p>
-            </div>
-          </div>
-          <div class="row-fluid">
-            <div class="offset2 span5">
-              <h3><a href="counseling.html">Proofreading</a></h3>
-              <p>Does your scholarship essay or application need one final proofreading before you send it out? Call 310.206.2875 to make a proofreading appointment!</p>
-           </div>
-            <div class="span5">
-              <h3><a href="">Quarterly workshops</a></h3>
-              <p>Need help getting started with the scholarship process? Looking for tried-and-true tips and tricks for requesting letters of recommendation, writing personal statements, and more?  Attend one (or several) of our quarterly scholarship workshops!</p>
-            </div>
-          </div>
-          <div class="row-fluid text-center">
-            <div class="well">
+            <div class="span8">
+              <div class="row-fluid">
+                <h3>Financial and Administrative</h3>
+                <p><a href="http://www.fao.ucla.edu/">Financial Aid Office</a><br />
+                  For information about financial aid packages, eFANs, grants, loans, and workstudy.
+                </p>
+                <p><a href="http://www.studentincrisis.ucla.edu/">Economic Crisis Response Team</a><br />
+                  For students in extreme financial distress.
+                </p>
+                <p><a href="http://www.sfs.finance.ucla.edu/">Business and Finance Services</a><br />
+                  Manage your BruinBill account, allow third-party access to student BruinBill accounts, inquire about Bruin Payment Plan to submit tuition payments in installments.
+                </p>
+                <p><a href="http://www.registrar.ucla.edu/">Registrar</a><br />
+                  Access the Schedule of Classes, obtain official documentation and transcripts, information on residency requirements.
+                </p>
+                <div id="support"></div>
+                <hr>
+                <h3>Support for Specific Populations</h3>
+                
+                <p><a href="http://www.aap.ucla.edu/">Academic Advancement Program</a><br />
+                  Offers a wide variety of programs for students coming to UCLA from underserved communities.
+                </p>
+                <p><a href="http://www.uclabruins.com/">Athletics</a><br />
+                  Resources for student-athletes.
+                </p>
+                <p><a href="http://www.gdnet.ucla.edu/">Graduate Division</a><br />
+                  Information about financial support for graduate students.
+                </p>
+                <p><a href="http://www.internationalcenter.ucla.edu/">Dashew International Student Center</a><br />
+                  Offers programs for the International Student community, Visa services.
+                </p>
+                <p><a href="http://www.osd.ucla.edu/">Office for Students with Disabilities</a><br />
+                  Programs and services for students with documented permanent and temporary disabilities.
+                </p>
+                <p><a href="http://www.brc.ucla.edu/">Bruin Resource Center</a><br />
+                  Programs and classes for former foster youth, undocumented students, transfer students, veterans, and students with dependents.
+                </p>
+                <p><a href="http://www.lgbt.ucla.edu/">LGBT Campus Resource Center</a><br />
+                  Information, education, and advocacy services for UCLA's LGBT community.
+                </p>
+                <p><a href="#">International Education Office/ Education Abroad Program</a><br />
+                  Study abroad programs, financial aid, and scholarships.
+                </p>
+                <div id="academic"></div>
+                <hr>
 
-            <h3><strong>To make a 30-minute writing appointment:</strong></h3>
-              <address>
-                <abbr title="Phone">Call :</abbr> (310) 206-2875
-              </address>
+                <h3>Academic Counseling and Support Services</h3>
+                <p><a href="http://www.ugeducation.ucla.edu/aap/programs/counseling/">Academic Advancement Program Counseling</a><br />
+                  For AAP students.
+                </p>
+                <p><a href="http://www.honors.ucla.edu/counseling.html">Honors Counseling</a><br />
+                  For students in the Honors Program.
+                </p>
+                <p><a href="http://www.ugeducation.ucla.edu/counseling/">College Academic Counseling</a><br />
+                  For students in the UCLA college.
+                </p>
+                <p><a href="http://www.uclabruins.com/ViewArticle.dbml?DB_OEM_ID=30500&ATCLID=208272559">Student-Athlete Counseling</a><br />
+                  For student-athletes.
+                </p>
+                <p><a href="http://www.wp.ucla.edu/index.php/home">Undergraduate Writing Center</a><br />
+                  One-on-one consultations with students to provide help with both specific academic writing assignments and with developing long-term goals for improving academic writing.
+                </p>
+                <div id="resource"></div>
+                <hr>
+
+                <h3>Student Wellness Resources</h3>
+                <p><a href="http://www.counseling.ucla.edu/">Counseling and Psychological Services</a><br />
+                  Individual counseling, student health and wellness programs.
+                </p>
+
+                <hr>
+                <div id="involve"></div>
+                <h3>Get Involved</h3>
+                <p><a href="http://www.uei.ucla.edu/communitylearninginternships.htm">Center for Community Learning</a><br />
+                  Information on programs that offer academic credit for internships and promote community engagement.
+                </p>
+                <p><a href="http://www.ugeducation.ucla.edu/ugresearch/">Undergraduate Research Centers</a><br />
+                  Research opportunities in the Humanities, Social Science, Life Sciences, and Physical Sciences.
+                </p>
+                <p><a href="http://www.studentgroups.ucla.edu/home/">Student Groups</a><br />
+                  A searchable list of all the extra-curricular student-run groups on campus.
+                </p>
+                
+                <hr>
+
+                <div id="parents"></div>
+                <h3>For Parents</h3>
+                <p><a href="http://parents.ucla.edu/">Parent and Family Programs</a><br />
+                  Information for the parents and guardians of UCLA students.
+                </p>
+                <hr>
+              </div>
             </div>
-          </div>
-          </div>
+         </div>
+        </div>
 
   <div class="container footer-feature">
           <!-- FOOTER -->
@@ -477,6 +542,21 @@
       <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
       <script src="../assets/js/bootstrap.js"></script>
       <script src="../assets/js/jquery.menu-aim.js"></script>
+      <script>
+        $(document).ready(function(){
+          $('a[href^="#"]').on('click',function (e) {
+              e.preventDefault();
 
+              var target = this.hash,
+              $target = $(target);
+
+              $('html, body').stop().animate({
+                  'scrollTop': $target.offset().top
+              }, 900, 'swing', function () {
+                  window.location.hash = target;
+              });
+          });
+        });
+      </script>
     </body>
   </html>
