Added Calendar Section
Calendar/Kat Resources

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -298,12 +298,12 @@
       <div class="container top-logo">
         <ul class="breadcrumb">
           <li><a href="../home/index.html">Home</a> <span class="divider">/</span></li>
-          <li class="active">Resources and Support</li>
+          <li class="active">Calendar</li>
         </ul>
       </div>
       <!-- pic -->
       <div class="container">
-        <img src="../assets/img/pic2.png">
+        <img src="../assets/img/pic3.png">
       </div>
       <!-- mid -->
       <div class="container main-feature-bg">
@@ -312,115 +312,14 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Resources and Support</h2>
+                <h2>Calendar</h2>
                 <hr/>
               </div>
             </div>
             <!-- Example row of columns -->
           <div class="row-fluid">
-            <div class="span4">
-              <h3>Quick Links</h3>
-              <ul class="unstyled">
-                <li><a href="#financial">Financial and Administrative</a></li>
-                <li><a href="#support">Support for Specific Populations</a></li>
-                <li><a href="#academic">Academic Counseling and Support Services</a></li>
-                <li><a href="#resource">Student Wellness Resources</a></li>
-                <li><a href="#involve">Get Involved</a></li>
-                <li><a href="#parents">For Parents</a></li>
-              </ul>
-            </div>
-            <div class="span8">
-              <div class="row-fluid">
-                <h3>Financial and Administrative</h3>
-                <p><a href="http://www.fao.ucla.edu/">Financial Aid Office</a><br />
-                  For information about financial aid packages, eFANs, grants, loans, and workstudy.
-                </p>
-                <p><a href="http://www.studentincrisis.ucla.edu/">Economic Crisis Response Team</a><br />
-                  For students in extreme financial distress.
-                </p>
-                <p><a href="http://www.sfs.finance.ucla.edu/">Business and Finance Services</a><br />
-                  Manage your BruinBill account, allow third-party access to student BruinBill accounts, inquire about Bruin Payment Plan to submit tuition payments in installments.
-                </p>
-                <p><a href="http://www.registrar.ucla.edu/">Registrar</a><br />
-                  Access the Schedule of Classes, obtain official documentation and transcripts, information on residency requirements.
-                </p>
-                <div id="support"></div>
-                <hr>
-                <h3>Support for Specific Populations</h3>
-                
-                <p><a href="http://www.aap.ucla.edu/">Academic Advancement Program</a><br />
-                  Offers a wide variety of programs for students coming to UCLA from underserved communities.
-                </p>
-                <p><a href="http://www.uclabruins.com/">Athletics</a><br />
-                  Resources for student-athletes.
-                </p>
-                <p><a href="http://www.gdnet.ucla.edu/">Graduate Division</a><br />
-                  Information about financial support for graduate students.
-                </p>
-                <p><a href="http://www.internationalcenter.ucla.edu/">Dashew International Student Center</a><br />
-                  Offers programs for the International Student community, Visa services.
-                </p>
-                <p><a href="http://www.osd.ucla.edu/">Office for Students with Disabilities</a><br />
-                  Programs and services for students with documented permanent and temporary disabilities.
-                </p>
-                <p><a href="http://www.brc.ucla.edu/">Bruin Resource Center</a><br />
-                  Programs and classes for former foster youth, undocumented students, transfer students, veterans, and students with dependents.
-                </p>
-                <p><a href="http://www.lgbt.ucla.edu/">LGBT Campus Resource Center</a><br />
-                  Information, education, and advocacy services for UCLA's LGBT community.
-                </p>
-                <p><a href="#">International Education Office/ Education Abroad Program</a><br />
-                  Study abroad programs, financial aid, and scholarships.
-                </p>
-                <div id="academic"></div>
-                <hr>
-
-                <h3>Academic Counseling and Support Services</h3>
-                <p><a href="http://www.ugeducation.ucla.edu/aap/programs/counseling/">Academic Advancement Program Counseling</a><br />
-                  For AAP students.
-                </p>
-                <p><a href="http://www.honors.ucla.edu/counseling.html">Honors Counseling</a><br />
-                  For students in the Honors Program.
-                </p>
-                <p><a href="http://www.ugeducation.ucla.edu/counseling/">College Academic Counseling</a><br />
-                  For students in the UCLA college.
-                </p>
-                <p><a href="http://www.uclabruins.com/ViewArticle.dbml?DB_OEM_ID=30500&ATCLID=208272559">Student-Athlete Counseling</a><br />
-                  For student-athletes.
-                </p>
-                <p><a href="http://www.wp.ucla.edu/index.php/home">Undergraduate Writing Center</a><br />
-                  One-on-one consultations with students to provide help with both specific academic writing assignments and with developing long-term goals for improving academic writing.
-                </p>
-                <div id="resource"></div>
-                <hr>
-
-                <h3>Student Wellness Resources</h3>
-                <p><a href="http://www.counseling.ucla.edu/">Counseling and Psychological Services</a><br />
-                  Individual counseling, student health and wellness programs.
-                </p>
-
-                <hr>
-                <div id="involve"></div>
-                <h3>Get Involved</h3>
-                <p><a href="http://www.uei.ucla.edu/communitylearninginternships.htm">Center for Community Learning</a><br />
-                  Information on programs that offer academic credit for internships and promote community engagement.
-                </p>
-                <p><a href="http://www.ugeducation.ucla.edu/ugresearch/">Undergraduate Research Centers</a><br />
-                  Research opportunities in the Humanities, Social Science, Life Sciences, and Physical Sciences.
-                </p>
-                <p><a href="http://www.studentgroups.ucla.edu/home/">Student Groups</a><br />
-                  A searchable list of all the extra-curricular student-run groups on campus.
-                </p>
-                
-                <hr>
-
-                <div id="parents"></div>
-                <h3>For Parents</h3>
-                <p><a href="http://parents.ucla.edu/">Parent and Family Programs</a><br />
-                  Information for the parents and guardians of UCLA students.
-                </p>
-                <hr>
-              </div>
+            <div class="span12">
+              <style>.embed-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; max-width: 100%; height: auto; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src="https://www.google.com/calendar/embed?title=Scholarship%20Resource%20Center&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=500&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=scholarship.ucla%40gmail.com&amp;color=%232952A3&amp;src=%23contacts%40group.v.calendar.google.com&amp;color=%23B1440E&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%2328754E&amp;ctz=America%2FLos_Angeles" style=" border-width:0 " height="500" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
             </div>
          </div>
         </div>
