--- a/home/index.html
+++ b/home/index.html
@@ -11,6 +11,7 @@
     <!-- Le styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="../assets/css/bootmin.css" rel="stylesheet">
+      
     <style type="text/css">
 
 
@@ -321,7 +322,7 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="span4">
-            <h3><a href="../services">SRC Services</a></h3>
+            <h3><a href="../services/index.html">SRC Services</a></h3>
             <p>Find out about the services that we offer to UCLA students and the general public!</p>
           </div>
           <div class="span4">
@@ -329,8 +330,8 @@
             <p>Scholarship resources for UCLA students offered through various UCLA Schools, Academic Departments, Research Centers and Student Organizations.</p>
          </div>
           <div class="span4">
-            <h3><a href="">Calendar</a></h3>
-            <p>Schedule of key scholarship dates during the academic year (regular SRC workshops, other special SRC events,  SRC donor scholarship deadlines, other important UCLA scholarship deadlines, and the FAFSA deadline, among others)</p>
+            <h3><a href="../calendar/index.html">Calendar</a></h3>
+            <p>Schedule of key scholarship dates during the academic year (regular SRC workshops, other special SRC events,  SRC donor scholarship deadlines, other important UCLA scholarship deadlines, and the FAFSA deadline, among others).</p>
           </div>
         </div>
         <!-- Example row of columns -->
@@ -344,8 +345,8 @@
             <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
          </div>
           <div class="span4">
-            <h3><h3><a href="">Resources and Support</a></h3>
-            <p>Vestibulum id ligula porta felis euismod semper.</p>
+            <h3><h3><a href="../resources/index.html">Resources and Support</a></h3>
+            <p>Other campus resources (financial aid, academic counseling, and student life at UCLA).</p>
           </div>
         </div>
 
