Added Merit Scholarship

--- a/home/index.html
+++ b/home/index.html
@@ -326,8 +326,8 @@
             <p>Find out about the services that we offer to UCLA students and the general public!</p>
           </div>
           <div class="span4">
-            <h3><a href="">UCLA Scholarships</a></h3>
-            <p>Scholarship resources for UCLA students offered through various UCLA Schools, Academic Departments, Research Centers and Student Organizations.</p>
+            <h3><a href="../scholarship/index.html">UCLA Scholarships</a></h3>
+            <p>General information about scholarships offered by UCLA Offices, UCLA Centers, UCLA Academic Departments, and UCLA Student Centers.</p>
          </div>
           <div class="span4">
             <h3><a href="../calendar/index.html">Calendar</a></h3>
@@ -337,7 +337,7 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="span4">
-            <h3><a href="">National and Int'l Merit Scholarships</a></h3>
+            <h3><a href="../merit/index.html">National and Int'l Merit Scholarships</a></h3>
             <p>Information on national and international honors scholarships for continuing students (Strauss, Beinecke, Goldwater, Udall, Truman) and for graduate study or study abroad (Rhodes, Mitchell, Churchill, Marshall, and others).</p>
           </div>
           <div class="span4">
