--- a/merit/hours.html
+++ b/merit/hours.html
@@ -298,7 +298,7 @@
         <ul class="breadcrumb">
           <li><a href="../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="index.html">SRC Services</a> <span class="divider">/</span></li>
-          <li class="active">Individual Counseling</li>
+          <li class="active">Scholarship Resource Center Drop-in Hours</li>
         </ul>
       </div>
       <!-- pic -->
@@ -312,7 +312,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Individual Counseling</h2>
+                <h2>Scholarship Resource Center Drop-in Hours</h2>
                 <hr/>
               </div>
             </div>
@@ -320,31 +320,15 @@
 
             <div class="row-fluid">
               <div class="span12">
-                <div class="well text-center">
-                  <strong>Call 310.206.2875 for a 30-minute appointment with a counselor at the SRC</strong>
-                </div>
-              </div>
-            </div>
-            <div class="row-fluid">
-              <div class="span4">
                 <p>
-                  If you are coming for an individual counseling appointment:
+                  SRC business hours (academic year):<br />
+                  Monday-Friday, 11 a.m. to 6 p.m.
+                  <p></p>
+                  SRC business hours (summer and intersession):<br />
+                  Monday-Friday, 12-5 p.m.
+                  <p></p>
+                  The SRC will be closed on all university holidays.
                 </p>
-                <ul>
-                  <li>Please bring a copy of the application(s) that you would like to discuss and any questions you have about it.</li>
-                </ul>
-              </div>
-              <div class="span8">
-                <p>If you are coming for a writing support or proofreading appointment:
-                </p>
-                <ul>
-                  <li>Call 310-206-2875 during our business hours at least 2-3 days before you’d like to schedule your appointment. You will be assigned to a counselor and given his/her email address.</li> 
-                  <li>Email your scholarship essay draft, writing prompt, and information about the scholarship to your counselor no later than 11 a.m. the day of your appointment.</li>
-                  <li>In your email, please specify if you need help with content-related issues or proofreading.</li>
-                  <li>Because we can only handle a maximum of 5 double-spaced pages per writing appointment, please choose a 5-page section of your essay for the counselor to review if your essay is longer than 5 pages.</li>
-                  <li>If you are a graduate student, please visit the Graduate Writing Center first: <a href="http://gsrc.ucla.edu/gwc/">http://gsrc.ucla.edu/gwc/</a></li>
-                  <li>Please note: We can assist UCLA students with essays related to scholarships and fellowships only.</li>
-                </ul>
               </div>
             </div>
             <hr>
