Slight touch up and updates

--- a/home/index.html
+++ b/home/index.html
@@ -309,9 +309,9 @@
               <li><img src="../assets/img/email.png" /></li>
               <li><img src="../assets/img/my.png" /></li>
             </ul>
-            <h4>Donate to the SRC</h4>
+            <h4>Donate</h4>
             <ul class="unstyled inline">
-              <li><a class="btn btn-gold btn-large">Give</a></li>
+              <li><a class="btn btn-gold btn-large" href="https://giving.ucla.edu/Standard/NetDonate.aspx?SiteNum=73&Fund=5752&Code=OL632">Give</a></li>
             </ul>
             <h4>Need more information?</h4>
             <ul class="unstyled inline">
