--- a/scholarship/index.html
+++ b/scholarship/index.html
@@ -223,6 +223,14 @@
           .pad-me {
             padding: 0 25px;
           }
+          #VIPLink {
+            background: #F7FCFF;
+            border: #B8E3FF solid 2px;
+            -webkit-border-radius: 10px;
+            -moz-border-radius: 10px;
+            border-bottom-radius: 10px;
+            padding: 10px;
+          }
       </style>
       
       <!--<link href="assets/css/bootstrap.css" rel="stylesheet">-->
@@ -333,10 +341,16 @@
               <div class="row-fluid">
                 <div id="education"></div>
                 <h3>UCLA Division of Undergraduate Education </h3>
-                <p>Scholarship Resource Center</p>
-                <ul>
-                  <li>Donor Scholarship (click here to access application for upcoming AY)</li>
-                </ul>
+                <div id="VIPLink">
+                  <div  class="row-fluid">
+                    <p class="text-center"><strong>Scholarship Resource Center</strong></p>
+                  </div>
+                  <div  class="row-fluid">
+                    <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Donors_Freshmen.html">Freshman</a></div>
+                    <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Cont_Students.html">Continuing</a></div>
+                    <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Transfer.html">Transfer</a></div>
+                  </div>
+                </div>
                 <p><a href="http://www.ugeducation.ucla.edu/honors/">Honors Programs</a></p>
                 <p><a href="http://www.ugeducation.ucla.edu/aap/">Academic Advancement Program</a></p>
                 <p><a href="http://www.ugeducation.ucla.edu/urhass">Undergraduate Resource Centers for Humanities and Social Sciences</a></p>
