Punctuations and formatting
For services

--- a/services/counseling.html
+++ b/services/counseling.html
@@ -321,7 +321,7 @@
             <div class="row-fluid">
               <div class="span12">
                 <div class="well text-center">
-                  <strong>Call 310.206.2875 for a 30-minute appointment with a counselor at the SRC</strong>
+                  <strong>Call (310) 206-2875 for a 30-minute appointment with a counselor at the SRC</strong>
                 </div>
               </div>
             </div>
@@ -338,7 +338,7 @@
                 <p>If you are coming for a writing support or proofreading appointment:
                 </p>
                 <ul>
-                  <li>Call 310-206-2875 during our business hours at least 2-3 days before you’d like to schedule your appointment. You will be assigned to a counselor and given his/her email address.</li> 
+                  <li>Call (310) 206-2875 during our business hours at least 2-3 days before you’d like to schedule your appointment. You will be assigned to a counselor and given his/her email address.</li> 
                   <li>Email your scholarship essay draft, writing prompt, and information about the scholarship to your counselor no later than 11 a.m. the day of your appointment.</li>
                   <li>In your email, please specify if you need help with content-related issues or proofreading.</li>
                   <li>Because we can only handle a maximum of 5 double-spaced pages per writing appointment, please choose a 5-page section of your essay for the counselor to review if your essay is longer than 5 pages.</li>
