--- a/services/index.html
+++ b/services/index.html
@@ -332,21 +332,21 @@
          <div class="row-fluid">
             <div class="offset2 span5">
               <h3><a href="counseling.html">Individual Counseling</a></h3>
-              <p>Have specific questions about a particular scholarship application? Not sure where to begin? Need help developing a realistic scholarship application schedule? Call us at 310.206.2875 to make an appointment.</p>
+              <p>Have specific questions about a particular scholarship application? Not sure where to begin? Need help developing a realistic scholarship application schedule? Call us at (310) 206-2875 to make an appointment.</p>
             </div>
             <div class="span5">
               <h3><a href="counseling.html">Scholarship essay writing support</a></h3>
-              <p>Need to brainstorm ideas for a scholarship essay? Having trouble with your outline? Need help polishing your draft? Call us at 310.206.2875 to make a 30-minute writing appointment!</p>
+              <p>Need to brainstorm ideas for a scholarship essay? Having trouble with your outline? Need help polishing your draft? Call us at (310) 206-2875 to make a 30-minute writing appointment.</p>
             </div>
           </div>
           <div class="row-fluid">
             <div class="offset2 span5">
               <h3><a href="counseling.html">Proofreading</a></h3>
-              <p>Does your scholarship essay or application need one final proofreading before you send it out? Call 310.206.2875 to make a proofreading appointment!</p>
+              <p>Does your scholarship essay or application need one final proofreading before you send it out? Call (310) 206-2875 to make a proofreading appointment.</p>
            </div>
             <div class="span5">
-              <h3><a href="">Quarterly workshops</a></h3>
-              <p>Need help getting started with the scholarship process? Looking for tried-and-true tips and tricks for requesting letters of recommendation, writing personal statements, and more?  Attend one (or several) of our quarterly scholarship workshops!</p>
+              <h3><a href="../calendar/index.html">Quarterly workshops</a></h3>
+              <p>Need help getting started with the scholarship process? Looking for tried-and-true tips and tricks for requesting letters of recommendation, writing personal statements, and more?  Attend one (or several) of our quarterly scholarship workshops.</p>
             </div>
           </div>
           <div class="row-fluid text-center">
