--- a/scholarship/index.html
+++ b/scholarship/index.html
@@ -229,7 +229,8 @@
             -webkit-border-radius: 10px;
             -moz-border-radius: 10px;
             border-bottom-radius: 10px;
-            padding: 10px;
+            padding: 10px 0 0 0;
+            margin-bottom: 10px;
           }
       </style>
       
