--- a/home/index.html
+++ b/home/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
+
     <!-- Le styles -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="../assets/css/bootmin.css" rel="stylesheet">
@@ -29,6 +31,9 @@
         font-weight: 300;
       }
 
+      h2, h3{
+        font-family: 'Archivo Narrow', sans-serif;
+      }
       .floss{
       color: #57A1C7;
       }
@@ -198,6 +203,18 @@
           background-repeat: repeat-x;
           background-color: #fff;
         }
+        #VIPLink {
+            padding: 5px 20px 10px 20px;
+            margin-bottom: 10px;
+          }
+          #extraInformation {
+            background-color: #2565a5;
+            padding-bottom: 10px;
+            color: #fff;
+          }
+          .branding {
+            font-family: "Garamond", sans-serif;
+          }
     </style>
     
     <!--<link href="assets/css/bootstrap.css" rel="stylesheet">-->
@@ -271,7 +288,7 @@
     </div>
 
     <div class="container logo">
-      <p><h2>Scholarship Resource Center</h2></p><!--<img src="assets/img/logo.png" /></p>-->
+      <p><h2><span class="branding">Scholarship Resource Center</div></h2></p><!--<img src="assets/img/logo.png" /></p>-->
     </div>
     <div class="container featured">
       <!--<h2>UCLA Scholarship Resource Center</h2>-->
@@ -307,16 +324,22 @@
               <li><img src="../assets/img/facebook.png" /></li>
               <li><img src="../assets/img/twitter.png" /></li>
               <li><img src="../assets/img/email.png" /></li>
-              <li><img src="../assets/img/my.png" /></li>
+              <li><a href="https://be.my.ucla.edu/services.asp#wks"><img src="../assets/img/my.png" /></a></li>
             </ul>
-            <h4>Donate</h4>
-            <ul class="unstyled inline">
-              <li><a class="btn btn-gold btn-large" href="https://giving.ucla.edu/Standard/NetDonate.aspx?SiteNum=73&Fund=5752&Code=OL632">Give</a></li>
-            </ul>
-            <h4>Need more information?</h4>
-            <ul class="unstyled inline">
-              <li><a class="btn btn-gold btn-large">FAQ</a></li>
-            </ul>
+            <div class="row-fluid">
+              <h4>Click here to access</h4>
+              <a href="#myModal" role="button" class="btn btn-gold btn-large btn-block" data-toggle="modal">SRC Donor Scholarships</a>
+            </div>
+            <div class="row-fluid">
+              <div class="span6">
+                <h4>Donate</h4>
+                <a class="btn btn-gold btn-large btn-block" href="https://giving.ucla.edu/Standard/NetDonate.aspx?SiteNum=73&Fund=5752&Code=OL632">Give</a>
+              </div>
+              <div class="span6">
+                <h4>More Info</h4>
+                <a class="btn btn-gold btn-large btn-block">FAQ</a>
+              </div>
+            </div>
           </div>
         </div>
         <!-- Example row of columns -->
@@ -342,7 +365,7 @@
           </div>
           <div class="span4">
             <h3><a href="">Search Services</a></h3>
-            <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+            <p>Section under construction</p>
          </div>
           <div class="span4">
             <h3><h3><a href="../resources/index.html">Resources and Support</a></h3>
@@ -350,6 +373,20 @@
           </div>
         </div>
 
+        </div><!-- sqeeuuze -->
+        <div class="container" id="extraInformation">
+          <div class="squeeze">
+            <div class="row-fluid">
+              <div class="span6">
+                <h3 class="text-center">Workshop</h3>
+                <p>The Scholarship Resource Center (SRC) serves as an information base and support service for students seeking scholarships.</p>
+              </div>
+              <div class="span6">
+                <h3 class="text-center">Strategies</h3>
+                <p>Each quarter our knowldegeable staff write on topics that they think might be helpful to scholarship hunters. We package that up with a sample of some upcoming scholarship deadlines and a listing of that quarter's scholarship workshops.</p>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- FOOTER -->
@@ -457,6 +494,26 @@
         <h3 class="popover-title">King Colobus</h3>
         <div class="popover-content"><img src="img/colobus.png"></div>
     </div>
+ 
+<!-- Modal -->
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3>Scholarship Resource Center Donor Scholarships</h3>
+  </div>
+  <div class="modal-body">
+    <div id="VIPLink">
+      <div class="row-fluid">
+        <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Cont_Students.html" class="btn btn-gold btn-large btn-block">Continuing Students</a></div>
+        <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Donors_Freshmen.html" class="btn btn-gold btn-large btn-block">Incoming Freshmen</a></div>
+        <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Transfer.html" class="btn btn-gold btn-large btn-block">Incoming Transfer Students</a></div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer" class="left">
+    <p class="text-left">For More Scholarships... <a href="../scholarship/index.html"> click here</a>.</p>
+  </div>
+</div>
 
     <!-- Le javascript
     ================================================== -->
