--- a/scholarship/index.html
+++ b/scholarship/index.html
@@ -224,12 +224,13 @@
             padding: 0 25px;
           }
           #VIPLink {
-            background: #F7FCFF;
+            background: #67BFF3;
             border: #B8E3FF solid 2px;
             -webkit-border-radius: 10px;
             -moz-border-radius: 10px;
             border-bottom-radius: 10px;
-            padding: 10px 0 0 0;
+            /*padding: 15px 10px 5px 10px;*/
+            padding: 5px 20px 10px 20px;
             margin-bottom: 10px;
           }
       </style>
@@ -344,12 +345,12 @@
                 <h3>UCLA Division of Undergraduate Education </h3>
                 <div id="VIPLink">
                   <div  class="row-fluid">
-                    <p class="text-center"><strong>Scholarship Resource Center</strong></p>
+                    <p class="text-center"><strong><h4 class="text-center">Scholarship Resource Center Donor Scholarships<h4></strong></p>
                   </div>
                   <div  class="row-fluid">
-                    <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Donors_Freshmen.html">Freshman</a></div>
-                    <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Cont_Students.html">Continuing</a></div>
-                    <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Transfer.html">Transfer</a></div>
+                    <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Cont_Students.html" class="btn btn-gold btn-large btn-block">Continuing Students</a></div>
+                    <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Donors_Freshmen.html" class="btn btn-gold btn-large btn-block">Incoming Freshmen</a></div>
+                    <div class="span4 text-center"><a href="http://scholarshipcenter.ucla.edu/DUE/Transfer.html" class="btn btn-gold btn-large btn-block">Incoming Transfer Students</a></div>
                   </div>
                 </div>
                 <p><a href="http://www.ugeducation.ucla.edu/honors/">Honors Programs</a></p>
