Massive Link Change
Don't ever want to do this again... Should modularize

--- a/home/index.html
+++ b/home/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -235,7 +234,7 @@
                                    <link rel="shortcut icon" href="../assets/ico/favicon.png">
   </head>
 
-  <body>
+  <body id="top">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -433,79 +432,11 @@
                 <p><a href="https://twitter.com/UCLASRC">Twitter</a></p>
              </div>
             </div>
-            <p class="pull-right"><a href="#"><i class="icon-arrow-up"></i>Back to top</a></p>
+            <p class="pull-right"><a href="#top"><i class="icon-arrow-up"></i>Back to top</a></p>
             <p><span class="muted">&copy; 2014 Scholarship Resource Center. All rights reserved.</span></p>
           </div>
         </footer>
       </div> <!-- /container -->
-
-    <!--
-      jQuery-menu-aim: the following defines each submenu's content. There are a million
-      and one ways to do this, places to structure the HTML, etc. This is just one example.
-      jQuery-menu-aim is agnostic to your HTML structure, it only fires events to be used
-      as you please.
-    -->
-    <div id="submenu-1" class="popover">
-        <h3 class="popover-title">Who We Are</h3>
-        <div class="popover-content">
-          Mission Statement<br />
-          History, Brief Statment
-        </div>
-    </div>
-    <div id="submenu-2" class="popover">
-        <h3 class="popover-title">SRC Services</h3>
-        <div class="popover-content">
-          Services<br />
-          Resources to find<br />
-          Resources to help apply<br />
-          Contact us<br />
-          Map(s)
-        </div>
-    </div>
-    <div id="submenu-3" class="popover">
-        <h3 class="popover-title">UCLA Scholarships</h3>
-        <div class="popover-content">
-          Under graduate SCHOOLS and COLLEGES<br />
-          Graduate SCHOOLS and COLLEGES<br />
-          UCLA Centers<br />
-          UCLA Departments<br />
-          UCLA Student Organizations<br />
-        </div>
-    </div>
-    <div id="submenu-4" class="popover">
-        <h3 class="popover-title">National and Int'l Merit Scholarships</h3>
-        <div class="popover-content">?</div>
-    </div>
-    <div id="submenu-5" class="popover">
-        <h3 class="popover-title">Calendar</h3>
-        <div class="popover-content">
-          Scholarship 1<br />
-          Scholarship 2<br />
-          Scholarship 3
-        </div>
-    </div>
-    <div id="submenu-6" class="popover">
-        <h3 class="popover-title">Online Scholarship Search Services</h3>
-        <div class="popover-content">
-        See our current link
-        </div>
-    </div>
-    <div id="submenu-7" class="popover">
-        <h3 class="popover-title">In The News</h3>
-        <div class="popover-content"><img src="img/gabon.png"></div>
-    </div>
-    <div id="submenu-8" class="popover">
-        <h3 class="popover-title">Resources and Support</h3>
-        <div class="popover-content">In this section, you'll find tips and information</div>
-    </div>
-    <div id="submenu-red-leaf" class="popover">
-        <h3 class="popover-title">Red Leaf</h3>
-        <div class="popover-content"><img src="img/red-leaf.png"></div>
-    </div>
-    <div id="submenu-king-colobus" class="popover">
-        <h3 class="popover-title">King Colobus</h3>
-        <div class="popover-content"><img src="img/colobus.png"></div>
-    </div>
  
 <!-- Modal -->
 <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
