--- a/scholarship/index.html
+++ b/scholarship/index.html
@@ -1,12 +1,13 @@
-﻿
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="utf-8">
-      <title>Scholarship Resource Center</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="">
-      <meta name="author" content="">
+﻿<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Scholarship Resource Center</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="English" name="language" />
+    <meta name="keywords" content="Scholarship, SRC, UC, UCLA, University of California Los Angeles, paying for college" />
+    <meta name="description" content="The UCLA Scholarship Resource Center provides scholarship information, resources, and support services to all UCLA students, regardless of financial aid eligibility."/>
+    <meta name="author" content="Joon-Sub Chung">
 
       <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
 
@@ -250,7 +251,7 @@
                                      <link rel="shortcut icon" href="../assets/ico/favicon.png">
     </head>
 
-    <body>
+    <body id="top">
 
       <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
@@ -262,45 +263,48 @@
             </button>
             <a class="brand" href="#"><strong>UCLA</strong> Scholarship Resource Center</a>
             <div class="nav-collapse collapse">
-              <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <b class="caret"></b></a>
+            <ul class="nav">
+              <li><a href="../home/index.html">Home</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <b class="caret"></b></a>
+                <!--
+                  jQuery-menu-aim: this <ul> defines the dropdown main menu and its contents.
+                  This is just one of many possible examples for defining the menu's HTML.
+                  jQuery-menu-aim is agnostic to your HTML structure, it only fires events to
+                  be used as you please.
+                -->
+                <!--
+                <ul class="dropdown-menu" role="menu">
+                    <li class="nav-header">Nav header</li>
+                    <li data-submenu-id="submenu-1"><a href="#">Who We Are</a></li>
+                    <li data-submenu-id="submenu-2"><a href="../services">SRC Services</a></li>
+                    <li data-submenu-id="submenu-3"><a href="#">UCLA Scholarships</a></li>
+                    <li data-submenu-id="submenu-4"><a href="#">National and Int'l Merit Scholarships</a></li>
+                    <li data-submenu-id="submenu-5"><a href="#">Calendar</a></li>
+                    <li data-submenu-id="submenu-6"><a href="#">Online Scholarship Search Services</a></li>
+                    <li data-submenu-id="submenu-7"><a href="#">In The News</a></li>
+                    <li data-submenu-id="submenu-8"><a href="#">Resources and Support</a></li>
+                </ul>
+                -->
+                <ul class="dropdown-menu">
+                  <li class="nav-header">Quick Links</li>
+                  <li><a href="../home/index.html">Home</a></li>
+                  <li><a href="../services/index.html">SRC Services</a></li>
+                  <li class="active"><a href="../scholarship/index.html">UCLA Scholarships</a></li>
+                  <li><a href="../calendar/index.html">Calendar</a></li>
+                  <li><a href="../merit/index.html">National and Int'l Merit Scholarships</a></li>
+                  <li><a href="#">Search Services</a></li>
+                  <li><a href="../resources/index.html">Resources and Support</a></li>
                   <!--
-                    jQuery-menu-aim: this <ul> defines the dropdown main menu and its contents.
-                    This is just one of many possible examples for defining the menu's HTML.
-                    jQuery-menu-aim is agnostic to your HTML structure, it only fires events to
-                    be used as you please.
+                  <li class="divider"></li>
+                  <li class="nav-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li>
                   -->
-                  <ul class="dropdown-menu" role="menu">
-                      <li class="nav-header">Nav header</li>
-                      <li data-submenu-id="submenu-1"><a href="#">Who We Are</a></li>
-                      <li data-submenu-id="submenu-2"><a href="../services/">SRC Services</a></li>
-                      <li data-submenu-id="submenu-3"><a href="#">UCLA Scholarships</a></li>
-                      <li data-submenu-id="submenu-4"><a href="#">National and Int'l Merit Scholarships</a></li>
-                      <li data-submenu-id="submenu-5"><a href="#">Calendar</a></li>
-                      <li data-submenu-id="submenu-6"><a href="#">Online Scholarship Search Services</a></li>
-                      <li data-submenu-id="submenu-7"><a href="#">In The News</a></li>
-                      <li data-submenu-id="submenu-8"><a href="#">Resources and Support</a></li>
-                  </ul>
-                  <!--<ul class="dropdown-menu">
-                    <li class="nav-header">Nav header</li>
-                    <ul class="inline">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                    </ul>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li class="nav-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>-->
-                </li>
-              </ul>
-            </div><!--/.nav-collapse -->
+                </ul>
+              </li>
+            </ul>
+          </div><!--/.nav-collapse -->
           </div>
         </div>
       </div>
@@ -426,19 +430,19 @@
             <div class="pad-me">
             <div class="row-fluid bump">
               <div class="span4">
-                <h4>More Links</h4>
+                <h3>More Links</h3>
                 <ul class="nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="../services">SRC Services</a></li>
-                  <li><a href="#">UCLA Scholarships</a></li>
-                  <li><a href="#">Calendar</a></li>
-                  <li><a href="#">National and Int'l Merit Scholarships</a></li>
+                  <li><a href="../home/index.html">Home</a></li>
+                  <li><a href="../services/index.html">SRC Services</a></li>
+                  <li class="active"><a href="../scholarship/index.html">UCLA Scholarships</a></li>
+                  <li><a href="../calendar/index.html">Calendar</a></li>
+                  <li><a href="../merit/index.html">National and Int'l Merit Scholarships</a></li>
                   <li><a href="#">Search Services</a></li>
-                  <li><a href="#">Resources and Support</a></li>
+                  <li><a href="../resources/index.html">Resources and Support</a></li>
                 </ul>
              </div>
              <div class="span4">
-                <h4>Contact Us</h4>
+                <h3>Contact Us</h3>
                 <address>
                   <strong>Scholarship Resource Center</strong><br>
                   233 Covel Commons<br />
@@ -447,87 +451,19 @@
                 </address>
              </div>
              <div class="span4">
-                <h4>Connect with Us</h4>
-                <p><a href="#">Facebook</a></p>
-                <p><a href="#">Twitter</a></p>
-                <p><a href="#">Google Plus</a></p>
+                <h3>Connect with Us</h3>
+                <p><a href="https://www.facebook.com/uclasrc">Facebook</a></p>
+                <p><a href="https://twitter.com/UCLASRC">Twitter</a></p>
              </div>
             </div>
-            <p class="pull-right"><a href="#"><i class="icon-arrow-up"></i>Back to top</a></p>
-            <p><span class="muted">&copy; 2013 Scholarship Resource Center. All rights reserved.</span></p>
+            <p class="pull-right"><a href="#top"><i class="icon-arrow-up"></i>Back to top</a></p>
+            <p><span class="muted">&copy; 2014 Scholarship Resource Center. All rights reserved.</span></p>
             </div>
           </footer>
         </div> <!-- /container -->
 
         </div>
 
-      </div>
-      <!--
-        jQuery-menu-aim: the following defines each submenu's content. There are a million
-        and one ways to do this, places to structure the HTML, etc. This is just one example.
-        jQuery-menu-aim is agnostic to your HTML structure, it only fires events to be used
-        as you please.
-      -->
-      <div id="submenu-1" class="popover">
-          <h3 class="popover-title">Who We Are</h3>
-          <div class="popover-content">
-            Mission Statement<br />
-            History, Brief Statment
-          </div>
-      </div>
-      <div id="submenu-2" class="popover">
-          <h3 class="popover-title">SRC Services</h3>
-          <div class="popover-content">
-            Services<br />
-            Resources to find<br />
-            Resources to help apply<br />
-            Contact us<br />
-            Map(s)
-          </div>
-      </div>
-      <div id="submenu-3" class="popover">
-          <h3 class="popover-title">UCLA Scholarships</h3>
-          <div class="popover-content">
-            Under graduate SCHOOLS and COLLEGES<br />
-            Graduate SCHOOLS and COLLEGES<br />
-            UCLA Centers<br />
-            UCLA Departments<br />
-            UCLA Student Organizations<br />
-          </div>
-      </div>
-      <div id="submenu-4" class="popover">
-          <h3 class="popover-title">National and Int'l Merit Scholarships</h3>
-          <div class="popover-content">?</div>
-      </div>
-      <div id="submenu-5" class="popover">
-          <h3 class="popover-title">Calendar</h3>
-          <div class="popover-content">
-            Scholarship 1<br />
-            Scholarship 2<br />
-            Scholarship 3
-          </div>
-      </div>
-      <div id="submenu-6" class="popover">
-          <h3 class="popover-title">Online Scholarship Search Services</h3>
-          <div class="popover-content">
-          See our current link
-          </div>
-      </div>
-      <div id="submenu-7" class="popover">
-          <h3 class="popover-title">In The News</h3>
-          <div class="popover-content"><img src="img/gabon.png"></div>
-      </div>
-      <div id="submenu-8" class="popover">
-          <h3 class="popover-title">Resources and Support</h3>
-          <div class="popover-content">In this section, you'll find tips and information</div>
-      </div>
-      <div id="submenu-red-leaf" class="popover">
-          <h3 class="popover-title">Red Leaf</h3>
-          <div class="popover-content"><img src="img/red-leaf.png"></div>
-      </div>
-      <div id="submenu-king-colobus" class="popover">
-          <h3 class="popover-title">King Colobus</h3>
-          <div class="popover-content"><img src="img/colobus.png"></div>
       </div>
 
       <!-- Le javascript
