updated small body tag
id

--- a/merit/index.html
+++ b/merit/index.html
@@ -241,7 +241,7 @@
                                      <link rel="shortcut icon" href="../assets/ico/favicon.png">
     </head>
 
-    <body>
+    <body id="top">
 
       <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
@@ -380,7 +380,7 @@
                 <p><a href="https://twitter.com/UCLASRC">Twitter</a></p>
              </div>
             </div>
-            <p class="pull-right"><a href="#"><i class="icon-arrow-up"></i>Back to top</a></p>
+            <p class="pull-right"><a href="#top"><i class="icon-arrow-up"></i>Back to top</a></p>
             <p><span class="muted">&copy; 2014 Scholarship Resource Center. All rights reserved.</span></p>
             </div>
           </footer>
