--- a/merit/sophomores/index.html
+++ b/merit/sophomores/index.html
@@ -245,7 +245,7 @@
                                      <link rel="shortcut icon" href="../../assets/ico/favicon.png">
     </head>
 
-    <body>
+    <body id="top">
 
       <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
