--- a/home/index.html
+++ b/home/index.html
@@ -384,10 +384,10 @@
           <div class="squeeze">
             <div class="row-fluid">
               <div class="span6">
-                <h3 class="text-center">Workshop</h3>
+                <h3 class="text-center">Workshops</h3>
                 <p>The Scholarship Resource Center (SRC) serves as an information base and support service for students seeking scholarships. Learn more by attending one of our quarterly workshops.</p>
                 <div class="text-center">
-                  <a href="../calendar/index.html" role="button" class="btn btn-gold btn">View Workshop</a>
+                  <a href="../calendar/index.html" role="button" class="btn btn-gold btn">View Workshops</a>
                 </div>
               </div>
               <div class="span6">
