Changed link to have home reference

--- a/scholarship/index.html
+++ b/scholarship/index.html
@@ -261,7 +261,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#"><strong>UCLA</strong> Scholarship Resource Center</a>
+            <a class="brand" href="../home/index.html"><strong>UCLA</strong> Scholarship Resource Center</a>
             <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="../home/index.html">Home</a></li>
