Added SRC to button

--- a/home/index.html
+++ b/home/index.html
@@ -333,7 +333,7 @@
             </ul>
             <div class="row-fluid">
               <h4>Check out our Donor Scholarships</h4>
-              <a href="#myModal" role="button" class="btn btn-gold btn-large btn-block" data-toggle="modal">Donor Scholarships</a>
+              <a href="#myModal" role="button" class="btn btn-gold btn-large btn-block" data-toggle="modal">SRC Donor Scholarships</a>
             </div>
             <div class="row-fluid">
               <div class="span6">
