--- a/merit/sophomores/udall.html
+++ b/merit/sophomores/udall.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -307,7 +307,7 @@
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
           <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
-          <li class="active">Goldwater Scholarship</li>
+          <li class="active">Udall Scholarships</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Goldwater Scholarship</h2>
+                <h2>Udall Scholarships</h2>
                 <hr/>
               </div>
             </div>
@@ -342,15 +342,9 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                  <p>
-                    For sophomores and juniors planning graduate study in Mathematics, Engineering, and the Sciences 
-                  </p>
-                  <p>
-                    Outstanding UCLA sophomores and juniors who intend to pursue careers in mathematics, the natural sciences, and engineering are invited to apply for the Goldwater Scholarship. 
-                  </p>
-                  <p>  
-                    The Goldwater Scholarship and Excellence in Education Foundation awards up to 300 merit-based educational scholarships to college sophomores and juniors throughout the United States. 
-                  </p>
+                	<p>
+                		Outstanding UCLA sophomores and juniors preparing for careers in Environmental Public Policy, OR Tribal Public Policy OR Native American Health Care (only Native Americans and Alaska Natives are eligible to apply in Tribal Public Policy or Native American Health Care) are invited to apply for the Udall Scholarship. The Udall Foundation seeks applicants with strong academic records, and demonstrated leadership and service. 
+					        </p>
                 </div>
               </div> 
               <div class="row-fluid">
@@ -358,7 +352,12 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                Each scholarship will cover eligible expenses for undergraduate tuition, fees, books, and room and board up to $7,500 annually. Sophomore level nominees will be eligible for two years of support and junior level nominees for one year of support. 
+                $5,000 per year to cover eligible expenses for tuition, fees, books, room and board.
+                <ul>
+                  <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
+                  <li>$10,000 for a semester</li>
+                  <li>$20,000 for a full academic year</li>
+                </ul>
                 </div>
               </div> 
               <div class="row-fluid">
@@ -366,15 +365,16 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                In order to be considered for UCLA nomination you must <br />
+                  An applicant must be nominated by UCLA and: 
                 <ol>
-                  <li>Be a sophomore or junior pursuing a bachelor's degree on a full-time basis. "Sophomore" is defined as a student who plans two more years of full-time undergraduate study beginning September 2014. "Junior" is defined as a student who plans one more year of full-time undergraduate study beginning September 2014</li>
-                  <li>Be enrolled in an undergraduate field of study that will lead to a career in mathematics, the natural sciences, or engineering (please note: pre-med students are eligible only if planning to enter a joint MD/PhD program with the goal of a research rather than a clinical career) </li>
-                  <li>Have a college grade point average of at least 3.0 </li>
-                  <li>Be a U.S. citizen, a permanent resident, or a U.S. national </li>
-                  <br />
+                  <li>Be a U.S. citizen, U.S. national, or U.S. permanent resident</li>
+                  <li>Be a sophomore or junior at the time of application ("sophomore" is defined as a student with two more years of undergraduate study after the year of application; a "junior" is defined as a student with one more year of undergraduate study after the year of application</li>
+                  <li>Be enrolled in an undergraduate major that will lead to a career related to the environment or a career in tribal public policy or Native American health care</li>
+                  <li>Have a cumulative GPA of 3.0 or better</li>
+                  <li>Demonstrate leadership and service</li>
                 </ol>
-                For more information, go to <a href="http://www.ugeducation.ucla.edu/honors/goldwater.html">http://www.ugeducation.ucla.edu/honors/goldwater.html</a>
+                For more information, go to <br />
+                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a>
 
                 </div>
               </div> 
