--- a/merit/sophomores/boren.html
+++ b/merit/sophomores/boren.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -307,7 +307,7 @@
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
           <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
-          <li class="active">Goldwater Scholarship</li>
+          <li class="active">Boren Scholarship</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Goldwater Scholarship</h2>
+                <h2>Boren Scholarship</h2>
                 <hr/>
               </div>
             </div>
@@ -342,15 +342,18 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                  <p>
-                    For sophomores and juniors planning graduate study in Mathematics, Engineering, and the Sciences 
-                  </p>
-                  <p>
-                    Outstanding UCLA sophomores and juniors who intend to pursue careers in mathematics, the natural sciences, and engineering are invited to apply for the Goldwater Scholarship. 
-                  </p>
-                  <p>  
-                    The Goldwater Scholarship and Excellence in Education Foundation awards up to 300 merit-based educational scholarships to college sophomores and juniors throughout the United States. 
-                  </p>
+                	<p>
+                		Boren Scholarships provide up to $20,000 to U.S. undergraduate students to study abroad in areas of the world that are critical to U.S. interests and underrepresented in study abroad, including Africa, Asia, Central &amp; Eastern Europe, Eurasia, Latin America, and the Middle East. The countries of Western Europe, Canada, Australia, and New Zealand are excluded. 
+					</p>
+                	<p>
+						Boren Scholars represent a variety of academic backgrounds, but all are interested in studying less commonly taught languages, including but not limited to Arabic, Chinese, Korean, Portuguese, Russian, and Swahili. 
+					</p>
+                	<p>
+						Boren Scholarships are funded by the National Security Education Program (NSEP), which focuses on geographic areas, languages, and fields of study deemed critical to U.S. national security. Applicants should identify how their study abroad program, as well as their future academic and career goals, will contribute to U.S. national security, broadly defined.  NSEP draws on a broad definition of national security, recognizing that the scope of national security has expanded to include not only the traditional concerns of protecting and promoting American well-being, but also the challenges of global society, including sustainable development, environmental degradation, global disease and hunger, population growth and migration, and economic competitiveness.
+					</p>
+                	<p>
+						Scholarship award recipients will be selected on the basis of merit with consideration for program preferences, academic record and potential to succeed in the proposed study abroad program, commitment to international education to fulfill academic and career goals, language interest and aptitude, and the quality and appropriateness of the proposed program and its relevance to the National Security Education Program. 
+					</p>
                 </div>
               </div> 
               <div class="row-fluid">
@@ -358,7 +361,12 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                Each scholarship will cover eligible expenses for undergraduate tuition, fees, books, and room and board up to $7,500 annually. Sophomore level nominees will be eligible for two years of support and junior level nominees for one year of support. 
+                Maximum scholarship awards are: 
+                <ul>
+                  <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
+                  <li>$10,000 for a semester</li>
+                  <li>$20,000 for a full academic year</li>
+                </ul>
                 </div>
               </div> 
               <div class="row-fluid">
@@ -366,15 +374,15 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                In order to be considered for UCLA nomination you must <br />
                 <ol>
-                  <li>Be a sophomore or junior pursuing a bachelor's degree on a full-time basis. "Sophomore" is defined as a student who plans two more years of full-time undergraduate study beginning September 2014. "Junior" is defined as a student who plans one more year of full-time undergraduate study beginning September 2014</li>
-                  <li>Be enrolled in an undergraduate field of study that will lead to a career in mathematics, the natural sciences, or engineering (please note: pre-med students are eligible only if planning to enter a joint MD/PhD program with the goal of a research rather than a clinical career) </li>
-                  <li>Have a college grade point average of at least 3.0 </li>
-                  <li>Be a U.S. citizen, a permanent resident, or a U.S. national </li>
-                  <br />
+                  <li>A U.S. citizen at the time of application.</li>
+                  <li>A high school graduate, or have earned a GED, and are matriculated in an undergraduate degree program in a U.S. post-secondary institution, including universities, colleges and community colleges accredited by an accrediting body recognized by the U.S. Department of Education.</li>
+                  <li>Applying to engage in a study abroad experience in a country outside of Western Europe, Canada, Australia, or New Zealand that meets home institution standards.</li>
+                  <li>Planning to use the scholarship for study abroad, and the study abroad program ends before you graduate. Boren Scholarships are not for study in the United States.</li>
                 </ol>
-                For more information, go to <a href="http://www.ugeducation.ucla.edu/honors/goldwater.html">http://www.ugeducation.ucla.edu/honors/goldwater.html</a>
+                For more information, go to <br />
+                <a href="http://www.gdnet.ucla.edu/asis/library/boren.htm">http://www.gdnet.ucla.edu/asis/library/boren.htm</a><br />
+                <a href="http://www.borenawards.org/boren_scholarship">http://www.borenawards.org/boren_scholarship</a><br />
 
                 </div>
               </div> 
