--- a/merit/sophomores/fashion.html
+++ b/merit/sophomores/fashion.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -307,7 +307,7 @@
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
           <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
-          <li class="active">Goldwater Scholarship</li>
+          <li class="active">Fashion Scholarship Fund (FSF)</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Goldwater Scholarship</h2>
+                <h2>Fashion Scholarship Fund (FSF)</h2>
                 <hr/>
               </div>
             </div>
@@ -342,15 +342,12 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                  <p>
-                    For sophomores and juniors planning graduate study in Mathematics, Engineering, and the Sciences 
+                	<p>
+                		The YMA Fashion Scholarship Fund (FSF) is a national non-profit association consisting of influential members of the fashion community, dedicated to promoting education of the fashion arts and business by granting scholarships to talented students and facilitating internships, mentorships, and career programs.
                   </p>
                   <p>
-                    Outstanding UCLA sophomores and juniors who intend to pursue careers in mathematics, the natural sciences, and engineering are invited to apply for the Goldwater Scholarship. 
-                  </p>
-                  <p>  
-                    The Goldwater Scholarship and Excellence in Education Foundation awards up to 300 merit-based educational scholarships to college sophomores and juniors throughout the United States. 
-                  </p>
+                    Students of any major with a demonstrated interest in fashion are qualified to apply. Previous scholars have included marketing, finance, psychology, and art history majors in addition to fashion design, merchandising, and textile majors. On average, approximately 100 scholarships are awarded each year
+					        </p>
                 </div>
               </div> 
               <div class="row-fluid">
@@ -358,7 +355,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                Each scholarship will cover eligible expenses for undergraduate tuition, fees, books, and room and board up to $7,500 annually. Sophomore level nominees will be eligible for two years of support and junior level nominees for one year of support. 
+                $5,000. One scholar from each school will also have the opportunity to compete for the four $30,000 Geoffrey Beene Scholarships (four finalists receive $10,000).
                 </div>
               </div> 
               <div class="row-fluid">
@@ -366,15 +363,14 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                In order to be considered for UCLA nomination you must <br />
                 <ol>
-                  <li>Be a sophomore or junior pursuing a bachelor's degree on a full-time basis. "Sophomore" is defined as a student who plans two more years of full-time undergraduate study beginning September 2014. "Junior" is defined as a student who plans one more year of full-time undergraduate study beginning September 2014</li>
-                  <li>Be enrolled in an undergraduate field of study that will lead to a career in mathematics, the natural sciences, or engineering (please note: pre-med students are eligible only if planning to enter a joint MD/PhD program with the goal of a research rather than a clinical career) </li>
-                  <li>Have a college grade point average of at least 3.0 </li>
-                  <li>Be a U.S. citizen, a permanent resident, or a U.S. national </li>
-                  <br />
+                  <li>Eligible students from member schools may apply. Students must be selected by the educator contact at one of the member schools. Please see the schools tab to see the list of member schools.</li>
+                  <li>Qualifying students must be enrolled as full-time students at a member FSF college/university. Eligible students must be a current sophomore, junior or senior (Seniors must graduate in the spring; fall graduates are NOT eligible)</li>
+                  <li>Applicants must have an overall G.P.A of 3.0 or above in a 4.0 G.P.A system.</li>
+                  <li>Upon receiving an FSF scholarship, it is mandatory to secure an industry-related internship, either found on your own or offered by a FSF member company.</li>
                 </ol>
-                For more information, go to <a href="http://www.ugeducation.ucla.edu/honors/goldwater.html">http://www.ugeducation.ucla.edu/honors/goldwater.html</a>
+                For more information, call The UCLA Scholarship Resource Center at 310-206-2875 or go to <br />
+                <a href="http://fashionscholarshipfund.org">http://fashionscholarshipfund.org</a><br />
 
                 </div>
               </div> 
