--- a/merit/sophomores/index.html
+++ b/merit/sophomores/index.html
@@ -344,19 +344,37 @@
               </div>
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
+                  <div class="span4"><a href="boren.html">Boren Scholarship</a></div>
+                  <div class="span8">Boren Scholarships provide U.S. undergraduate students with the opportunity to study abroad in areas of the world that are critical to U.S. interests and underrepresented in study abroad, including Africa, Asia, Central &amp; Eastern Europe, Eurasia, Latin America, and the Middle East. </div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="fashion.html">Fashion Scholarship Fund (FSF)</a></div>
+                  <div class="span8">The YMA Fashion Scholarship Fund (FSF) grants scholarships to talented students and facilitates internships, mentorships, and career programs. Open Students of any major with a demonstrated interest in fashion.</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
                   <div class="span4"><a href="goldwater.html">Goldwater Scholarship</a></div>
                   <div class="span8">For sophomores and juniors planning graduate study in Mathematics, Engineering, and the Sciences</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
-                  <div class="span4"><a href="#">Strauss Scholarship Foundation Award</a></div>
+                  <div class="span4"><a href="jim.html">Jim Murray Memorial Foundation Scholarship</a></div>
+                  <div class="span8">The Jim Murray Memorial Foundation mission is to award five (5) $5,000 scholarships annually students interested in print journalism with an emphasis on sports. </div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="strauss.html">Strauss Scholarship Foundation Award</a></div>
                   <div class="span8">For sophomores and juniors interested in pursuing a new or continuing public service project</div>
                 </div>
               </div> <!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
-                  <div class="span4"><a href="#">Udall Scholarships</a></div>
+                  <div class="span4"><a href="udall.html">Udall Scholarships</a></div>
                   <div class="span8">For Sophomores and Juniors interested in careers in Environmental Public Policy OR Tribal Public Policy OR Native American Health Care</div>
                 </div>
               </div> <!-- end -->
