--- a/merit/sophomores/jim.html
+++ b/merit/sophomores/jim.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -307,7 +307,7 @@
           <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
           <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
           <li><a href="./index.html">Sophomores</a> <span class="divider">/</span></li>
-          <li class="active">Goldwater Scholarship</li>
+          <li class="active">Boren Scholarship</li>
         </ul>
       </div>
       <!-- pic -->
@@ -321,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>Goldwater Scholarship</h2>
+                <h2>Boren Scholarship</h2>
                 <hr/>
               </div>
             </div>
@@ -342,15 +342,9 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                  <p>
-                    For sophomores and juniors planning graduate study in Mathematics, Engineering, and the Sciences 
-                  </p>
-                  <p>
-                    Outstanding UCLA sophomores and juniors who intend to pursue careers in mathematics, the natural sciences, and engineering are invited to apply for the Goldwater Scholarship. 
-                  </p>
-                  <p>  
-                    The Goldwater Scholarship and Excellence in Education Foundation awards up to 300 merit-based educational scholarships to college sophomores and juniors throughout the United States. 
-                  </p>
+                	<p>
+                		The Jim Murray Memorial Foundation's (JMMF) primary purpose is to raise money for the "Murray Scholars" journalism scholarships. Currently, 28 universities participate annually in a national essay competition. A one-time $5,000.00 scholarship is awarded to five undergraduate journalism students. Eligible students are sophomores and juniors with a career interest in journalism, specifically sports writing.
+					        </p>
                 </div>
               </div> 
               <div class="row-fluid">
@@ -358,7 +352,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                Each scholarship will cover eligible expenses for undergraduate tuition, fees, books, and room and board up to $7,500 annually. Sophomore level nominees will be eligible for two years of support and junior level nominees for one year of support. 
+                  $5000
                 </div>
               </div> 
               <div class="row-fluid">
@@ -366,15 +360,15 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                In order to be considered for UCLA nomination you must <br />
                 <ol>
-                  <li>Be a sophomore or junior pursuing a bachelor's degree on a full-time basis. "Sophomore" is defined as a student who plans two more years of full-time undergraduate study beginning September 2014. "Junior" is defined as a student who plans one more year of full-time undergraduate study beginning September 2014</li>
-                  <li>Be enrolled in an undergraduate field of study that will lead to a career in mathematics, the natural sciences, or engineering (please note: pre-med students are eligible only if planning to enter a joint MD/PhD program with the goal of a research rather than a clinical career) </li>
-                  <li>Have a college grade point average of at least 3.0 </li>
-                  <li>Be a U.S. citizen, a permanent resident, or a U.S. national </li>
-                  <br />
+                  <li>Undergraduate students who will be of junior or senior status for the fall quarter. Seniors must be graduating the following Spring, not mid-year.</li>
+                  <li>Applicants must be citizens of the United States.</li>
+                  <li>Full time students with at least a “B” (3.0) grade point average.</li>
+                  <li>Applicants must show integrity of character, interest in and respect for his/her fellow humans, and the energy to use his/her writing talents to the fullest extent.</li>
                 </ol>
-                For more information, go to <a href="http://www.ugeducation.ucla.edu/honors/goldwater.html">http://www.ugeducation.ucla.edu/honors/goldwater.html</a>
+                For more information, go to <br />
+                <a href="http://www.gdnet.ucla.edu/asis/library/boren.htm">http://www.gdnet.ucla.edu/asis/library/boren.htm</a><br />
+                <a href="http://www.borenawards.org/boren_scholarship">http://www.borenawards.org/boren_scholarship</a><br />
 
                 </div>
               </div> 
